Fixed submit button on iOS

--- a/static/css/partials/_form.scss
+++ b/static/css/partials/_form.scss
@@ -38,7 +38,7 @@ input {
     width: 100%;
     transition: .3s;
     box-shadow: none;
-
+    -webkit-appearance: none;
 
     &:hover {
       background-color: $color-primary-dark;
